Change endpoint, rename service
